<resources>
    <string name="app_name">Dogs \'R Us</string>
    <string name="favorites">Favorites</string>
    <string name="dogs">Dogs</string>
    <string name="about_us">About Us</string>
    <string name="our_mission">Our Mission</string>
    <string name="reservations">Reservations</string>

    <!-- Strings related to images -->
    <string name="logo">Filled circular image containing logo of the Dogs \'R Us application</string>
    <string name="rounded_square_bg">White rounded square container which acts as the background to main content, buttons, etc.</string>
    <string name="little_blue_dog_img">Image of a cute little dog drawn using blue lines (shown on success notice pages)</string>
    <string name="blue_border_img">Curved blue border line used for decorative and aesthetic appeal on pages containing notification content</string>
    <string name="black_line_img">Simple straight black line used for decorative and aesthetic appeal on pages with textual content</string>

    <!-- Strings related to login screen -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="sign_in_btn">Sign in</string>
    <string name="create_acct_link">Create an Account</string>

    <!-- Strings related to Create Account screen -->
    <string name="create_acct_title">Create Account</string>
    <string name="create_acct_email">Enter your email address</string>
    <string name="create_acct_pw">Enter your password</string>
    <string name="create_acct_pw_confirm">Re-enter your password</string>
    <string name="create_acct_btn">Create</string>

    <!-- Strings related to Create Account Success screen -->
    <string name="success_notice">Success!</string>
    <string name="create_acct_success_notice">Your account has been successfully created.\nClick here to sign in.</string>

    <!-- Strings related to Dog Directory Screen -->
    <string name="title_activity_dog_directory">Dog Directory</string>
    <string name="dog1_contentDesc">Cute, medium-build puppy with light-brown, downy fur and an adorable wet nose.</string>
    <string name="dog2_contentDesc">I\'m a sleepy little chihuahua with an attitude. Won\'t you take me home?</string>
    <string name="dog3_contentDesc">What is that? Is that a husky?</string>
    <string name="dog4_contentDesc">I don\'t know what I am, but if you take me home, I love you long time. Arf! Arf!</string>
    <string name="dog5_contentDesc">Am I a hot dog? Why, yes I am. And I\'m the hottest dog around.</string>
    <string name="dog6_contentDesc">Do I look a little hairy to you? You should take me home and give me a haircut.</string>
    <string name="dog1name">Beyonce</string>
    <string name="dog2name">Jay-Z</string>
    <string name="dog3name">Kim</string>
    <string name="dog4name">Kanye</string>
    <string name="dog5name">Selena</string>
    <string name="dog6name">JB</string>

    <!-- Strings related to Our Mission Screen -->
    <string name="our_mission_lbl">Our Mission</string>
    <string name="mission_stmt_beg"> We here at Dogs \'R Us&#8230;\n
        Lorem ipsum dolor sit amet,\n
        consectetur adipiscing elit. Nullam\n
        eu ornare odio Maeceras odio est.
    </string>


    <!-- Strings related to Donation Screen -->
    <string name="cardholder_name">Jane Doe</string>
    <string name="cc_number">XXXX-XXXX-XXXX-XXXX</string>
    <string name="card_number">Enter credit card number</string>
    <string name="csv">CSV</string>
    <string name="submit_donation_btn">Donate</string>
    <string name="thank_you_msg">Woof woof!\nThank you for partnering with us.</string>
    <string name="visa">Visa</string>
    <string name="mc">Master Card</string>
    <string name="donate_btn">Donate</string>

    <!-- Strings related to Reservation Screens -->
    <string name="dogDesc">placeholder text</string>
    <string name="reserve">Reserve</string>
    <string name="select_date">Select a date for pickup</string>
    <string name="del_reserve">Delete Reservation</string>

    <!-- Strings related to Dog Specs screens -->
    <string name="add_favorites">Add to Favorites</string>
    <string name="reserve_button">Reserve this Dog</string>
    <string name="title_activity_login">Sign in</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>


</resources>
