<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".JB"
    tools:layout_editor_absoluteY="81dp">

    <android.support.design.widget.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/colorPrimaryDark"
        app:itemIconTint="@color/design_default_color_primary"
        app:itemTextColor="@color/white"
        app:menu="@menu/bottom_nav"
        tools:layout_editor_absoluteY="461dp" />

    <ImageView
        android:id="@+id/JB_Pic"
        android:layout_width="match_parent"
        android:layout_height="385dp"
        android:contentDescription="@string/dog6_contentDesc"
        app:srcCompat="@drawable/dog6image"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp" />

    <TextView
        android:id="@+id/DogDescription"
        android:layout_width="308dp"
        android:layout_height="91dp"
        android:fontFamily="casual"
        android:text="@string/dog6_contentDesc"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/white"
        android:translationZ="1dp"
        tools:layout_editor_absoluteX="45dp"
        tools:layout_editor_absoluteY="291dp" />

    <ImageView
        android:id="@+id/rounded_square_bg2"
        android:layout_width="match_parent"
        android:layout_height="131dp"
        android:alpha=".5"
        android:contentDescription="@string/rounded_square_bg"
        android:tint="@android:color/black"
        app:srcCompat="@drawable/rounded_square_img"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="254dp" />

    <ImageButton
        android:id="@+id/FavoriteButton"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@color/white"
        android:contentDescription="@string/favorites"
        android:textAlignment="center"
        app:srcCompat="@drawable/ic_favorites"
        tools:layout_editor_absoluteX="148dp"
        tools:layout_editor_absoluteY="397dp" />

    <ImageButton
        android:id="@+id/ReserveButton"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@color/white"
        android:contentDescription="@string/reservations"
        app:srcCompat="@drawable/ic_reservation"
        tools:layout_editor_absoluteX="205dp"
        tools:layout_editor_absoluteY="397dp" />

    <TextView
        android:id="@+id/JB_name"
        android:layout_width="46dp"
        android:layout_height="43dp"
        android:fontFamily="casual"
        android:text="@string/dog6name"
        android:textColor="@color/white"
        android:textSize="30sp"
        tools:layout_editor_absoluteX="169dp"
        tools:layout_editor_absoluteY="248dp" />


</android.support.constraint.ConstraintLayout>

