<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".OurMission"
    tools:layout_editor_absoluteY="81dp">

    <ImageView
        android:id="@+id/logo_our_mission"
        android:layout_width="wrap_content"
        android:layout_height="149dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:contentDescription="@string/logo"
        app:layout_constraintBottom_toTopOf="@+id/rounded_square_bg2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

    <ImageView
        android:id="@+id/rounded_square_bg2"
        android:layout_width="0dp"
        android:layout_height="257dp"
        android:layout_marginStart="43dp"
        android:layout_marginTop="19dp"
        android:layout_marginEnd="43dp"
        android:layout_marginBottom="25dp"
        android:contentDescription="@string/rounded_square_bg"
        app:layout_constraintBottom_toTopOf="@+id/donate_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo_our_mission"
        app:srcCompat="@drawable/rounded_square_img" />

    <TextView
        android:id="@+id/our_mission_lbl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="casual"
        android:text="@string/our_mission_lbl"
        android:textColor="@android:color/black"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/black_line_border_img_top"
        app:layout_constraintStart_toStartOf="@+id/black_line_border_img_top"
        app:layout_constraintTop_toTopOf="@+id/rounded_square_bg2"
        app:layout_constraintVertical_bias="0.888" />

    <TextView
        android:id="@+id/mission_stmt_beg"
        android:layout_width="235dp"
        android:layout_height="102dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="casual"
        android:text="@string/mission_stmt_beg"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/black_line_border_img_bottom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/black_line_border_img_top"
        android:layout_width="192dp"
        android:layout_height="20dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/black_line_img"
        app:layout_constraintBottom_toTopOf="@+id/mission_stmt_beg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/black_line_img" />

    <Button
        android:id="@+id/donate_btn"
        android:layout_width="wrap_content"
        android:layout_height="55dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:background="@android:color/black"
        android:onClick="goToDonateScreen"
        android:text="@string/donate_btn"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/bottom_button_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rounded_square_bg2" />

    <ImageView
        android:id="@+id/black_line_border_img_bottom"
        android:layout_width="192dp"
        android:layout_height="17dp"
        android:layout_marginBottom="12dp"
        android:contentDescription="@string/black_line_img"
        app:layout_constraintBottom_toBottomOf="@+id/rounded_square_bg2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/black_line_img" />


    <android.support.constraint.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <ImageView
        android:id="@+id/bottom_button_background"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:contentDescription="@string/blue_border_img"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@color/colorPrimaryDark" />

    <ImageButton
        android:id="@+id/dog_directory_button"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginEnd="120dp"
        android:background="@color/colorPrimaryDark"
        android:contentDescription="@string/dogs"
        android:onClick="goToDogDirectory"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toTopOf="@+id/bottom_button_background"
        app:srcCompat="@drawable/ic_dogs" />

    <ImageButton
        android:id="@+id/favorites_button"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="50dp"
        android:background="@color/colorPrimaryDark"
        android:contentDescription="@string/favorites"
        android:onClick="goToFavorites"
        app:layout_constraintStart_toEndOf="@+id/dog_directory_button"
        app:layout_constraintTop_toTopOf="@+id/bottom_button_background"
        app:srcCompat="@drawable/ic_favorites" />

    <ImageButton
        android:id="@+id/my_reservations_button"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="50dp"
        android:background="@color/colorPrimaryDark"
        android:contentDescription="@string/reservations"
        android:onClick="goToMyReservations"
        app:layout_constraintStart_toEndOf="@+id/favorites_button"
        app:layout_constraintTop_toTopOf="@+id/bottom_button_background"
        app:srcCompat="@drawable/ic_reservation" />

    <ImageButton
        android:id="@+id/our_mission_button"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="50dp"
        android:background="@color/colorPrimaryDark"
        android:contentDescription="@string/about_us"
        android:onClick="goToOurMission"
        app:layout_constraintStart_toEndOf="@+id/my_reservations_button"
        app:layout_constraintTop_toTopOf="@+id/my_reservations_button"
        app:srcCompat="@drawable/ic_about_us" />

    <TextView
        android:id="@+id/dog_directory_text"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="120dp"
        android:text="@string/dogs"
        android:textAlignment="center"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/dog_directory_button" />

    <TextView
        android:id="@+id/favorites_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="42dp"
        android:text="@string/favorites"
        app:layout_constraintStart_toEndOf="@+id/dog_directory_text"
        app:layout_constraintTop_toBottomOf="@+id/favorites_button" />

    <TextView
        android:id="@+id/my_reservations_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:text="@string/reservations"
        app:layout_constraintStart_toEndOf="@+id/favorites_text"
        app:layout_constraintTop_toBottomOf="@+id/my_reservations_button" />

    <TextView
        android:id="@+id/our_mission_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="@string/about_us"
        app:layout_constraintStart_toEndOf="@+id/my_reservations_text"
        app:layout_constraintTop_toBottomOf="@+id/our_mission_button" />


</android.support.constraint.ConstraintLayout>