<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".DonateSuccessNotice"
    tools:layout_editor_absoluteY="81dp">

    <ImageView
        android:id="@+id/rounded_white_sq_bg"
        android:layout_width="0dp"
        android:layout_height="334dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="72dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/rounded_square_bg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/rounded_square_img" />

    <ImageView
        android:id="@+id/little_blue_dog"
        android:layout_width="94dp"
        android:layout_height="87dp"
        android:layout_marginTop="106dp"
        android:layout_marginBottom="24dp"
        android:contentDescription="@string/little_blue_dog_img"
        app:layout_constraintBottom_toTopOf="@+id/donation_success_top_border"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/little_blue_dog_img" />

    <TextView
        android:id="@+id/thank_you_msg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="17dp"
        android:fontFamily="casual"
        android:text="@string/thank_you_msg"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/donation_success_bottom_border"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/donation_success_top_border" />

    <ImageView
        android:id="@+id/donation_success_bottom_border"
        android:layout_width="199dp"
        android:layout_height="0dp"
        android:layout_marginBottom="149dp"
        android:contentDescription="@string/black_line_img"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/thank_you_msg"
        app:srcCompat="@drawable/black_line_img" />

    <ImageView
        android:id="@+id/donation_success_top_border"
        android:layout_width="199dp"
        android:layout_height="0dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/black_line_img"
        app:layout_constraintBottom_toTopOf="@+id/thank_you_msg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/little_blue_dog"
        app:srcCompat="@drawable/black_line_img" />


    <android.support.constraint.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <ImageView
        android:id="@+id/bottom_button_background"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:contentDescription="@string/blue_border_img"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@color/colorPrimaryDark" />

    <ImageButton
        android:id="@+id/dog_directory_button"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginEnd="120dp"
        android:background="@color/colorPrimaryDark"
        android:contentDescription="@string/dogs"
        android:onClick="goToDogDirectory"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toTopOf="@+id/bottom_button_background"
        app:srcCompat="@drawable/ic_dogs" />

    <ImageButton
        android:id="@+id/favorites_button"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="50dp"
        android:background="@color/colorPrimaryDark"
        android:contentDescription="@string/favorites"
        android:onClick="goToFavorites"
        app:layout_constraintStart_toEndOf="@+id/dog_directory_button"
        app:layout_constraintTop_toTopOf="@+id/bottom_button_background"
        app:srcCompat="@drawable/ic_favorites" />

    <ImageButton
        android:id="@+id/my_reservations_button"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="50dp"
        android:background="@color/colorPrimaryDark"
        android:contentDescription="@string/reservations"
        android:onClick="goToMyReservations"
        app:layout_constraintStart_toEndOf="@+id/favorites_button"
        app:layout_constraintTop_toTopOf="@+id/bottom_button_background"
        app:srcCompat="@drawable/ic_reservation" />

    <ImageButton
        android:id="@+id/our_mission_button"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="50dp"
        android:background="@color/colorPrimaryDark"
        android:contentDescription="@string/about_us"
        android:onClick="goToOurMission"
        app:layout_constraintStart_toEndOf="@+id/my_reservations_button"
        app:layout_constraintTop_toTopOf="@+id/my_reservations_button"
        app:srcCompat="@drawable/ic_about_us" />

    <TextView
        android:id="@+id/dog_directory_text"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="120dp"
        android:text="@string/dogs"
        android:textAlignment="center"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/dog_directory_button" />

    <TextView
        android:id="@+id/favorites_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="42dp"
        android:text="@string/favorites"
        app:layout_constraintStart_toEndOf="@+id/dog_directory_text"
        app:layout_constraintTop_toBottomOf="@+id/favorites_button" />

    <TextView
        android:id="@+id/my_reservations_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:text="@string/reservations"
        app:layout_constraintStart_toEndOf="@+id/favorites_text"
        app:layout_constraintTop_toBottomOf="@+id/my_reservations_button" />

    <TextView
        android:id="@+id/our_mission_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="@string/about_us"
        app:layout_constraintStart_toEndOf="@+id/my_reservations_text"
        app:layout_constraintTop_toBottomOf="@+id/our_mission_button" />



</android.support.constraint.ConstraintLayout>